# slam14

ch10/ceres_custombundle/: SnavelyReprojectionError.h  ceresBundle.cpp
ch10/ceres_custombundle/common/: BALProblem.cpp  BALProblem.h  projection.h
ch10/ceres_custombundle/common/tools/: rotation.h
ch10/g2o_custombundle/: g2o_bal_class.h  g2o_bundle.cpp
ch10/g2o_custombundle/common/: BALProblem.cpp  BALProblem.h  BundleParams.h  projection.h
ch10/g2o_custombundle/common/tools/: rotation.h
ch11/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp
ch12/: CMakeLists.txt  feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
ch13/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp
ch13/dense_monocular/: CMakeLists.txt  dense_mapping.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt
ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/cmake_modules/: FindG2O.cmake
ch7/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
project/: .clang-format
project/0.4/include/myslam/: g2o_types.h  map.h  visual_odometry.h
project/0.4/src/: frame.cpp  g2o_types.cpp  visual_odometry.cpp
project/0.4/test/: run_vo.cpp
